Abakus azure callback + div sonar (#5584)